lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/buffer_append_string_c_escaped/buffer_append_string_c_escaped3/buffer_append_string_c_escaped3.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/buffer_append_string_c_escaped/buffer_append_string_c_escaped3/buffer_append_string_c_escaped3.c:24:32: error: use of undeclared identifier 'dyn_size'
    size_t sz_s_len = (size_t) dyn_size[-1];
                               ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
2 errors generated.
